fix portfolio description word wrap

--- a/src/Portfolio/portfolio.css
+++ b/src/Portfolio/portfolio.css
@@ -22,6 +22,11 @@
 
 .project-description{
     margin: 15px;
+    white-space: pre-wrap;
+    white-space: -moz-pre-wrap;  
+    white-space: -pre-wrap;
+    white-space: -o-pre-wrap;    
+    word-wrap: break-word; 
 }
 
 .project-description > a{
